--- a/views/service.ejs
+++ b/views/service.ejs
@@ -15,7 +15,7 @@
 
   <!-- Banner -->
   <div class="container-fluid px-0">
-    <img src="https://images.unsplash.com/photo-1571896349842-33c89424de2d" class="w-100" style="height: 350px; object-fit: cover;">
+    <img src="https://media-cdn-v2.laodong.vn/Storage/NewsPortal/2023/3/21/1170122/296817374_1015897554.jpg" class="w-100" style="height: 350px; object-fit: cover;">
     <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
       <h1 class="display-4 fw-bold">Dịch Vụ Khách Sạn</h1>
       <p class="lead">Trải nghiệm những dịch vụ đẳng cấp tại ZentoStay</p>
