--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -31,12 +31,12 @@
               </ul>
             </details>
           </li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Khách Hàng</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Phản Hồi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Đánh Giá</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Phòng</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Cơ Sở và Thiết Bị</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Thiết Lập</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/managecustomer">Khách Hàng</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/feedback">Phản Hồi</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/reviews">Đánh Giá</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/manageroom">Phòng</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/manageequipment">Cơ Sở và Thiết Bị</a></li>
+          <!--<li class="nav-item"><a class="nav-link text-white" href="#">Thiết Lập</a></li>-->
         </ul>
       </aside>
       
