set up done customer_booking

--- a/views/confirmpayment.ejs
+++ b/views/confirmpayment.ejs
@@ -82,8 +82,8 @@
                     Tổng: <%= booking.tongTien?.toLocaleString() %> VNĐ
                   </td>
                   <td>
-                    Ngày đến: <%= booking.ngayNhanPhong.toISOString().split('T')[0] %><br>
-                    Ngày đi: <%= booking.ngayTraPhong.toISOString().split('T')[0] %><br>
+                    Ngày đến: <%= booking.ngayNhanPhong %><br>
+                    Ngày đi: <%= booking.ngayTraPhong %><br>
                     Số ngày: <%= booking.soNgayThue %><br>
                   </td>
                   <td>
