--- a/views/managecustomer.ejs
+++ b/views/managecustomer.ejs
@@ -53,7 +53,7 @@
 
       <!-- Main Content -->
       <main class="col-md-10 p-4">
-        <h3 class="mb-4">Tài Khoản Khách Hàng</h3>
+        <h3 class="mb-4">Khách Hàng</h3>
         <div class="card p-3">
           <div class="d-flex justify-content-end mb-3">
             <!--input type="text" class="form-control w-25" placeholder="Nhập để tìm kiếm..."-->
